# arclib-numerics

./: .gitignore  Cargo.toml  Makefile  README.md  requirements-dev.txt
arclib-numerics-example/: Cargo.toml
arclib-numerics-example/src/: main.rs
arclib-numerics-impl/: Cargo.toml  build.rs
arclib-numerics-impl/benches/: dense_array_benchmark.rs  lbm_benchmark.rs
arclib-numerics-impl/cpp/: array.cpp  array.h
arclib-numerics-impl/cpp/grid/: cuda_transfer.cu  lbm_d2q9_fused.cpp  lbm_d3q19_fused.cpp
arclib-numerics-impl/src/: bc.rs  context.rs  ffi.rs  graph.rs  lib.rs
arclib-numerics-impl/src/domains/: mod.rs  probe.rs
arclib-numerics-impl/src/domains/grid/: mod.rs
arclib-numerics-impl/src/domains/grid/lbm/: bc.rs  compiler.rs  export.rs  mod.rs  probe.rs  topology.rs
arclib-numerics-impl/src/integrators/: symplectic.rs
arclib-numerics-impl/src/kernels/: grid_kernels.rs  mod.rs
arclib-numerics-impl/src/nodes/: bc.rs  constant.rs  export.rs  migrate.rs  mod.rs  next_state.rs  probe.rs  state.rs
arclib-numerics-impl/src/nodes/equation/: graph.rs  mod.rs  node.rs
arclib-numerics-impl/src/nodes/equation/nodes/: binary.rs  constant.rs  mod.rs  unary.rs  variable.rs
arclib-numerics-impl/tests/: test_dense_array.rs  test_lbm_cavity.rs  test_lbm_d2q9_cavity.rs  test_lbm_d3q19_cavity.rs  test_migrate_node.rs  test_numerics_graphs.rs
arclib-numerics-py/: Cargo.toml  pyproject.toml
arclib-numerics-py/benches/: test_dense_array_benchmark.py  test_lbm_benchmark.py
arclib-numerics-py/python/arclib_numerics/: __init__.py
arclib-numerics-py/src/: lib.rs
arclib-numerics-py/tests/: test_dense_array.py  test_lbm_cavity.py
arclib-numerics-spec/: Cargo.toml
arclib-numerics-spec/src/: bc.rs  checkpoint.rs  domain.rs  kernel.rs  lib.rs  tensor.rs  utils.rs
docs/: python.html  rust.html
docs/source/: api.rst  conf.py  index.rst
