[package]
name = "arclib-numerics-impl"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
#arclib-graph-spec = { git = "https://github.com/albers4/arclib-graph", branch = "main" }
#arclib-graph-impl = { git = "https://github.com/albers4/arclib-graph", branch = "main" }
arclib-graph-spec = { path = "../../arclib-graph/arclib-graph-spec" }
arclib-graph-impl = { path = "../../arclib-graph/arclib-graph-impl" }
arclib-numerics-spec = { path = "../arclib-numerics-spec" }
uuid = { version = "1", features = ["v4"] }
numpy = { version = "0.28" }
ndarray = { version = "0.17" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[build-dependencies]
cc = "1.0"

[features]
default = ["std"]
std = []

[[bench]]
name = "lbm_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3