[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "arclib-numerics"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"