[package]
name = "arclib-numerics-spec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arclib-graph-spec = { path = "../../arclib-graph/arclib-graph-spec" }
arclib-graph-impl = { path = "../../arclib-graph/arclib-graph-impl" }
ndarray = { version = "0.17" }